// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeckPile > renders deck pile with cards 1`] = `
<div
  class="flex flex-col items-center gap-2"
  data-testid="deck-pile"
>
  <div
    class="text-sm font-semibold text-gray-700"
  >
    Deck
  </div>
  <div
    class="relative"
  >
    <div
      class="w-32 h-40 rounded-lg bg-gradient-to-b from-slate-700 to-slate-900 "
      data-testid="card-back"
    />
    <div
      class="absolute -bottom-2 -right-2 bg-gray-800 text-white text-xs font-bold rounded-full w-6 h-6 flex items-center justify-center"
      data-testid="deck-count"
    >
      10
    </div>
  </div>
</div>
`;

exports[`DeckPile > renders empty deck 1`] = `
<div
  class="flex flex-col items-center gap-2"
  data-testid="deck-pile"
>
  <div
    class="text-sm font-semibold text-gray-700"
  >
    Deck
  </div>
  <div
    class="relative"
  >
    <div
      class="text-gray-400 italic text-sm"
      data-testid="deck-empty"
    >
      Empty
    </div>
  </div>
</div>
`;
